--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -25,7 +25,7 @@
             TOTAL:
           </th>
           <th>
-            <%= cart_subtotal_cents / 100.0 %>
+            <%= humanized_money_with_symbol cart_subtotal_cents / 100.0 %>
           </th>
         </tr>
       </tfoot>
@@ -48,5 +48,10 @@
       <% end %>
     </div>
   </div>
+  <% else %>
+
+  # <h2>Looks like your shopping cart is empty!</h2>
+  # <%= link_to 'Home', :root %>
+  # <% end %>
 
 </section>
