--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,27 @@
 <h1>Admin::Dashboard#show</h1>
 <p>Find me in app/views/admin/dashboard/show.html.erb</p>
+
+<section class="admin-dashboard">
+
+  <header class="page-header">
+    <h1>Admin &raquo; Dashboard</h1>
+  </header>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Total Products</th>
+          <th>Total Categories</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <%= @count_products %>
+          </td>
+          <td>
+            <%= @count_categories %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+</section>
